# simple-search

./: LICENSE  README.md  pyproject.toml  server.py  smithery.toml  smithery.yaml
src/my_tavily_server/: __init__.py  server.py
tools/simple-tavily-mcp/: requirements.txt
