# my-smithery-tavily-server/pyproject.toml
[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "my_tavily_server"
version = "0.1.0"
description = "A simplified Tavily MCP server for Smithery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tavily-python>=0.2.0",
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "requests>=2.31.0",        # 新增：用于发送 HTTP 请求
    "beautifulsoup4>=4.12.3",  # 新增：用于解析 HTML
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "my_tavily_server.server:create_server"
